--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Quiz de Banco de Dados</h1>
     <form id="quizForm"></form>
-    <button onclick="corrigir()">Corrigir</button>
+    <button type="button" onclick="corrigir()">Corrigir</button>
     <div id="resultado"></div>
   </div>
   <script src="script.js"></script>
